--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1802,12 +1802,24 @@ input[type="search"]::-webkit-search-clear-button {
     background: #f7f7f7;
 }
 
+.profil .content-profil .data-user label {
+    font-size: 1em;
+    font-weight: 600;
+    color: #484848;
+}
+
 .profil .content-profil .data-user .nama-user {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 25px;
+}
+
+.profil .content-profil .data-user .nama-user label {
+    font-size: 1em;
+    font-weight: 600;
+    color: #484848;
 }
 
 .profil .content-profil .data-user .nama-user input {
@@ -1817,7 +1829,7 @@ input[type="search"]::-webkit-search-clear-button {
 }
 
 .profil .content-profil .data-user input {
-    color: #000;
+    color: #484848;
     padding: 12px 16px;
     border: 1px solid #ccc;
     font-size: 1em;
@@ -1834,6 +1846,7 @@ input[type="search"]::-webkit-search-clear-button {
     border-radius: 5px;
     border: none;
     background: #c25b4a;
+    cursor: pointer;
 }
 
 .profil .content-profil .data-user button a {
@@ -1841,7 +1854,7 @@ input[type="search"]::-webkit-search-clear-button {
     color: #fff;
     font-weight: 700;
     font-size: 1em;
-    text-transform: uppercase;
+    text-transform: capitalize;
     cursor: pointer;
 }
 
@@ -1850,7 +1863,7 @@ input[type="search"]::-webkit-search-clear-button {
     color: #fff;
     font-weight: 700;
     font-size: 1em;
-    text-transform: uppercase;
+    text-transform: capitalize;
     cursor: pointer;
 }
 
